--- a/tests/Javascript/SpecRunner.html
+++ b/tests/Javascript/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="lib/jasmine-2.2.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="../../../src/Javascript/lava.js"></script>
+  <script src="../../src/Javascript/lava.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/lava.spec.js"></script>
