--- a/javascript/examples/piechart.html
+++ b/javascript/examples/piechart.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Lava.js Standalone</title>
+    <title>Lava.js | Basic Syntax</title>
     <script type="text/javascript" src="../dist/lava.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <style rel="stylesheet" type="text/css">
@@ -14,8 +14,8 @@
             margin: 0;
         }
 
-        .full-height {
-            height: 100vh;
+        p {
+            font-size: larger;
         }
 
         .flex-center {
@@ -28,29 +28,62 @@
             position: relative;
         }
 
+        .align-left {
+            text-align: left;
+        }
+
+        .float {
+            float: left;
+        }
+
         .content {
             text-align: center;
         }
 
         .title {
-            font-size: 84px;
-        }
-
-        .m-b-md {
-            margin-bottom: 10px;
+            font-size: 74px;
         }
     </style>
 </head>
 
 <body>
-    <div class="flex-center position-ref full-height">
+    <div class="flex-center position-ref">
         <div class="content">
-            <div class="title m-b-md">
-                Lava.js <small>v4.0</small>
+            <div class="title">
+                Lava.js v4.0
             </div>
+            <p>The Google Chart API wrapper.</p>
 
-            <div class="links">
-                <div id="my-pie-chart"></div>
+            <div>
+                <div class="align-left float">
+                    <pre><code>
+var chartJson = {
+    label: "Test",
+    type: "PieChart",
+    elementId: "my-pie-chart",
+    datatable: [
+        ['Task', 'Hours per Day'],
+        ['Work',     11],
+        ['Eat',      2],
+        ['Commute',  2],
+        ['Watch TV', 2],
+        ['Sleep',    7]
+    ],
+    options: {
+        title: 'My Daily Activities'
+    },
+};
+
+lava.store(chartJson);
+lava.run();
+                    </code></pre>
+                </div>
+                <div class="float" style="width: 400px;">
+                    <pre><code>
+&#x3C;div id=&#x22;my-pie-chart&#x22;&#x3E;&#x3C;/div&#x3E;
+                    </code></pre>
+                    <div id="my-pie-chart"></div>
+                </div>
             </div>
         </div>
     </div>
